FullQa New/src/objects/Commission__c.object
<CustomObject>
    <description>Used to track the detailed commission associated with a partner invoice</description>
    <fields>
        <fullName>AmountCredited__c</fullName>
        <description>The Amount Credited back to the customer on a customer invoice</description>
        <inlineHelpText>The Amount Credited back to the customer on a customer invoice</inlineHelpText>
        <label>Amount Credited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountPaid__c</fullName>
        <description>The Amount the Customer has paid towards an Invoice</description>
        <inlineHelpText>The Amount the Customer has paid towards an Invoice</inlineHelpText>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckDate__c</fullName>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CheckNumber__c</fullName>
        <label>Check Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommissionAmount__c</fullName>
        <label>Commission Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomerInvoiceDueDate__c</fullName>
        <description>Date the Customer Invoice is due</description>
        <inlineHelpText>Date the Customer Invoice is due</inlineHelpText>
        <label>Customer Invoice Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerNumber__c</fullName>
        <description>SiteManager ID pushed in from GP</description>
        <inlineHelpText>SiteManager ID pushed in from GP</inlineHelpText>
        <label>CustomerNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commissions (Customer Account)</relationshipLabel>
        <relationshipName>Commissions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Invoice_Date__c</fullName>
        <label>Customer Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Payment_Date__c</fullName>
        <label>Customer Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Payment_Status__c</fullName>
        <formula>IF(IsPaid__c, &quot;Paid&quot;, &quot;Unpaid&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer_Payment_Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DatePaid__c</fullName>
        <description>The Date a Customer Invoice was paid</description>
        <inlineHelpText>The Date a Customer Invoice was paid</inlineHelpText>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GPCreatedDate__c</fullName>
        <label>GP Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GPLastModifiedDate__c</fullName>
        <label>GP Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <label>Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceSubtotal__c</fullName>
        <label>Invoice Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InvoiceTotal__c</fullName>
        <label>Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InvoiceType__c</fullName>
        <description>Numeric representation of the Type of Invoice</description>
        <inlineHelpText>Numeric representation of the Type of Invoice</inlineHelpText>
        <label>Invoice Type</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsDing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Ding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPaid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVoid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Void</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSPCheckDate__c</fullName>
        <label>MSP Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSPCheckNumber__c</fullName>
        <label>MSP Check Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSPCommissionAmount__c</fullName>
        <label>MSP Commission Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSPCommissionPercent__c</fullName>
        <label>MSP Commission Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSPThreshold__c</fullName>
        <label>MSP Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderID__c</fullName>
        <label>OrderID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>OrderNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <description>delete in the future, this is not being used in the integration from DEVSQL</description>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Renewal_Date__c</fullName>
        <label>Order Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <description>Field value options should be as follows:
- Processing
- Invoiced
- Paid</description>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerID__c</fullName>
        <label>PartnerID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerType__c</fullName>
        <description>Numeric representation of Partner Type</description>
        <inlineHelpText>Numeric representation of Partner Type</inlineHelpText>
        <label>PartnerType</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MSP Commissions</relationshipLabel>
        <relationshipName>Commissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Payment_Date__c</fullName>
        <label>Partner Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Payment_Status__c</fullName>
        <formula>IF( ISBLANK( MSPCheckNumber__c ) ,&quot;Unpaid&quot;,&quot;Paid&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Sales_Rep__c</fullName>
        <label>Partner Sales Rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenewalDate__c</fullName>
        <label>Renewal Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SiteManagerID__c</fullName>
        <description>Customer SiteManager ID pulled down from the Account</description>
        <formula>Customer_Account__r.SiteManagerID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer SiteManager ID pulled down from the Account</inlineHelpText>
        <label>SiteManager ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystem__c</fullName>
        <label>Source System</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxAmount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Commission__c</fullName>
        <label>Total Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Commission</label>
    <nameField>
        <label>Commission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>